# saferplaces-agent-webapp

./: .gitignore  launch.bat  pyproject.toml
src/saferplaces_agent_webapp/: app.py
src/saferplaces_agent_webapp/webapp/: __init__.py
src/saferplaces_agent_webapp/webapp/backend/: __init__.py  lga_interface.py  routes.py  s3_interface.py  views.py
src/saferplaces_agent_webapp/webapp/static/css/: chat.css  index.css  layers.css
src/saferplaces_agent_webapp/webapp/static/js/: _chat_utils.js  _map_utils.js  _routes_map.js  _utils.js  test.js
src/saferplaces_agent_webapp/webapp/templates/: chat.html  index.html  index_OLD.html  index_lm.html  index_raster.html  layers.html  project_dashboard.html  projects.html
